[gd_scene load_steps=5 format=3 uid="uid://b4c7fml0d8nfu"]

[ext_resource type="Script" uid="uid://bk6e2g51yv5dc" path="res://scripts/hud.gd" id="1_efote"]
[ext_resource type="FontFile" uid="uid://c67165jr88n4m" path="res://fonts/Xolonium-Regular.ttf" id="2_vow1y"]

[sub_resource type="InputEventAction" id="InputEventAction_efote"]
action = &"start_game"

[sub_resource type="Shortcut" id="Shortcut_vow1y"]
events = [SubResource("InputEventAction_efote")]

[node name="HUD" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_efote")

[node name="ScoreLabel" type="Label" parent="."]
offset_left = 24.0
offset_top = 8.0
offset_right = 88.0
offset_bottom = 57.0
theme_override_fonts/font = ExtResource("2_vow1y")
theme_override_font_sizes/font_size = 40
text = "0"
vertical_alignment = 1

[node name="Message" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -296.0
offset_right = 400.0
offset_bottom = 309.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_vow1y")
theme_override_font_sizes/font_size = 60
text = "Catch the Rats!
Use AWSD to move around the screen."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="StartButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -64.0
offset_top = -72.0
offset_right = 50.0
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 0
mouse_default_cursor_shape = 2
theme_override_fonts/font = ExtResource("2_vow1y")
theme_override_font_sizes/font_size = 40
shortcut = SubResource("Shortcut_vow1y")
text = "Start"

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="MuteLabel" type="Button" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -136.0
offset_top = 24.0
offset_right = -32.0
offset_bottom = 75.0
grow_horizontal = 0
mouse_default_cursor_shape = 2
theme_override_fonts/font = ExtResource("2_vow1y")
theme_override_font_sizes/font_size = 35
text = "Mute"

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_message_timer_timeout"]
[connection signal="pressed" from="MuteLabel" to="." method="_on_mute_label_pressed"]
